[package]
name = "filecoin-proofs-api"
version = "13.0.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.24.1", default-features = false }
bincode = "1.1.2"
blstrs = "0.6.1"
lazy_static = "1.2"
serde = "1.0.104"
#filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~13.0.0", default-features = false }
#filecoin-hashers = { version = "~8.0.0", default-features = false, features = ["poseidon", "sha256"] }
#fr32 = { version = "~6.0.0", default-features = false }
#storage-proofs-core = { version = "~13.0.0", default-features = false }
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "grindability-fix", default-features = false }
filecoin-hashers = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "grindability-fix", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "grindability-fix", default-features = false }
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "grindability-fix", default-features = false }

[features]
default = ["opencl", "cuda"]
cuda = ["filecoin-proofs-v1/cuda", "filecoin-hashers/cuda", "storage-proofs-core/cuda", "bellperson/cuda"]
opencl = ["filecoin-proofs-v1/opencl", "filecoin-hashers/opencl", "storage-proofs-core/opencl", "bellperson/opencl"]
multicore-sdr = ["filecoin-proofs-v1/multicore-sdr"]
