[package]
name = "filecoin-proofs-api"
version = "16.1.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.26", default-features = false }
bincode = "1.1.2"
blstrs = "0.7"
lazy_static = "1.2"
serde = "1.0.104"
#filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~16.1.0", default-features = false }
#filecoin-hashers = { version = "~11.1.0", default-features = false, features = ["poseidon", "sha256"] }
#fr32 = { version = "~9.1.0", default-features = false }
#storage-proofs-core = { version = "~16.1.0", default-features = false }
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "supersnaps", default-features = false }
filecoin-hashers = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "supersnaps", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "supersnaps", default-features = false }
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "supersnaps", default-features = false }

[features]
default = ["opencl", "cuda"]
cuda = ["filecoin-proofs-v1/cuda", "filecoin-hashers/cuda", "storage-proofs-core/cuda", "bellperson/cuda"]
cuda-supraseal = ["filecoin-proofs-v1/cuda-supraseal", "filecoin-hashers/cuda", "storage-proofs-core/cuda-supraseal", "bellperson/cuda-supraseal"]
opencl = ["filecoin-proofs-v1/opencl", "filecoin-hashers/opencl", "storage-proofs-core/opencl", "bellperson/opencl"]
multicore-sdr = ["filecoin-proofs-v1/multicore-sdr"]
big-tests = []
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["filecoin-proofs-v1/fixed-rows-to-discard", "storage-proofs-core/fixed-rows-to-discard"]
